<resources>
    <string name="app_name">TaskHub</string>

    <string name="new_subtask">Yeni Görev Ekle</string>
    <string name="subtask_name">Görev İsmi</string>
    <string name="new_task">Görev</string>
    <string name="save">Ekle</string>
    <string name="delete">Sil</string>
    <string name="checkbox">CheckBox</string>
    <string name="edit_task">Görevi Düzenle</string>
    <string name="update">Güncelle</string>

    <string name="added_successfully">Başarıyla Eklendi !</string>
    <string name="please_fill_out_all_fields">Lütfen tüm alanları doldurunuz !</string>


</resources>