<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewTaskSheet"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:background="@drawable/sheet_background" >

    <ImageView
        android:layout_width="56dp"
        android:layout_height="28dp"
        android:src="@drawable/minus"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <!-- Title -->
    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_subtask"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@color/third"/>

    <!-- Write SubTask Title, View -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/subtask_name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/first"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="21"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Type Your Task, View-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="@color/first"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_task"
            android:fontFamily="@font/open_sans_semibold"
            android:lines="6"
            android:gravity="top|start"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Delete Button View-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/first"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/delete"
        android:textAllCaps="false"/>

    <!-- Save Button View -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/first"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/save"
        android:textAllCaps="false"/>

</LinearLayout>